feat: update workflows internal data structure
